kbd-chooser (1.01) UNRELEASED; urgency=low

  * Joey Hess
    - Change code that fset debian-installer/keymap seen to a strange 
      value of "yes" to fset it to a valid value of "true". Not checked.

 -- Joey Hess <joeyh@debian.org>  Wed,  1 Sep 2004 16:45:08 -0400

kbd-chooser (1.00) unstable; urgency=low

  * Use lib/debian-installer-startup.d rather than etc/rcS.d
    Closes: #260812.
  * Recai Oktas
    - Correct symbol conversion when in ASCII mode. Closes: #261144.
  * Updated translations: 
    - Arabic (ar.po) by Ossama M. Khayat
    - Croatian (hr.po) by Kruno
    - Norwegian Nynorsk (nn.po) by Håvard Korsvoll
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov

 -- Joey Hess <joeyh@debian.org>  Sun, 25 Jul 2004 19:07:50 -0400

kbd-chooser (0.60) unstable; urgency=low

  * Eugeniy Meshcheryakov
    - Patch to fix incorrect koi8 to unicode mapping. Closes: #257426.

 -- Alastair McKinstry <mckinstry@debian.org>  Mon, 12 Jul 2004 22:29:35 +0100

kbd-chooser (0.59) unstable; urgency=low

  * Matt Zimmerman
    - User Mode Linux support. Closes: #57383.

 -- Alastair McKinstry <mckinstry@debian.org>  Thu,  8 Jul 2004 21:10:08 +0100

kbd-chooser (0.58) unstable; urgency=low

   * Denis Barbier
     - Make kbd-chooser work with keymaps containing plus symbols.
   * Recai Oktas
     - Preserve compatibility with the console-tools by modifying
       the previous patch.

 -- Alastair McKinstry <mckinstry@debian.org>  Wed,  7 Jul 2004 20:40:57 +0100

kbd-chooser (0.57) unstable; urgency=low

  * Denis Barbier
    - Make kbd-chooser work with keymaps containing unicode chars.
  * Recai Oktas
    - Set console mode to unicode.  Closes: #251550.
    - Prevent too many file descriptors referring to the console.

 -- Alastair McKinstry <mckinstry@debian.org>  Sun, 04 Jul 2004 11:29:36 +0300

kbd-chooser (0.56) unstable; urgency=low

  * Colin Watson
    - Restore debian/po/output.

 -- Colin Watson <cjwatson@debian.org>  Fri,  2 Jul 2004 12:55:18 +0100
